tests/snapshots/run_wpt_conformance__onnx_elu_float16_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "elu.https.any.js",
    "elu float16 4D tensor default options",
    "onnx",
    "PASS",
)
